@@ -30,6 +30,9 @@ Improvements:
    implementation always returns None, i. e. keeps current behaviour.
  - crashdb.py: Add a table "version" with the database format version. Add
    automatic upgrading to the most current format.
+ - crashdb.py: Put address signatures from reports checked with
+   check_duplicate() into the duplicate database, so that implementations of
+   known() can check for these.
 
 1.26 (2011-11-11):
 ------------------
